Updated code to make HotelSEarch and LocateHotel work

--- a/params/newparams.cfg
+++ b/params/newparams.cfg
@@ -9,7 +9,7 @@
 					"What's the name of the hotel you would like to book?",
 					"Please mention the name of the hotel to book."
 				],
-				"context": "Get_Hotel_Name"
+				"context": ""
 			},
 			{
 				"name": "location",
@@ -28,7 +28,7 @@
 					"What is the Check-In Date?",
 					"Please mention the Check-In Date"
 				],
-				"context": "Get_CheckIn_Date"
+				"context": "BookHotel_dialog_From"
 			},
 			{
 				"name": "checkoutDate",
@@ -38,17 +38,7 @@
 					"What is the Check-Out Date?",
 					"Please mention the Check-Out Date"
 				],
-				"context": "Get_CheckOut_Date"
-			},
-			{
-				"name": "RegNo",
-				"placeholder": "$RegNo",
-				"required": "True",
-				"prompts": [
-					"What's your registration number?",
-					"Please type your registration number"
-				],
-				"context": "GetRegNo"
+				"context": "BookHotel_dialog_To"
 			}
 		],
 		"actions": "BookHotel"
@@ -67,7 +57,7 @@
 			{
 				"name": "hotelnames",
 				"placeholder": "$hotelnames",
-				"required": "True",
+				"required": "False",
 				"prompts": [
 					"What is the hotel name?",
 					"Please mention the hotel name."
@@ -106,7 +96,7 @@
 				"prompts": [
 					"In which city is the hotel located?"
 				],
-				"context": "Get_Location_of_Stay"
+				"context": ""
 			},
 			{
 				"name": "hotelnames",
@@ -116,17 +106,7 @@
 					"What is the hotel name?",
 					"Please mention the hotel name."
 				],
-				"context": "Get_Hotel_Name"
-			},
-			{
-				"name": "RegNo",
-				"placeholder": "$RegNo",
-				"required": "True",
-				"prompts": [
-					"What's your registration number?",
-					"Please type your registration number"
-				],
-				"context": "GetRegNo"
+				"context": ""
 			}
 		],
 		"actions": "LocateHotel"
