Renamed the intents and Updated the parameter config file

--- a/params/newparams.cfg
+++ b/params/newparams.cfg
@@ -1,66 +1,13 @@
 {
-	"BookHotel": {
-		"intentname": "BookHotel",
-		"Parameters": [{
-				"name": "hotelnames",
-				"placeholder": "$hotelnames",
-				"required": "True",
-				"prompts": [
-					"What's the name of the hotel you would like to book?",
-					"Please mention the name of the hotel to book."
-				],
-				"context": ""
-			},
+	"HotelBooking": {
+		"intentname": "HotelBooking",
+		"Parameters": [
 			{
 				"name": "location",
 				"placeholder": "$location",
 				"required": "True",
 				"prompts": [
 					"In which city you want to stay?"
-				],
-				"context": ""
-			},
-			{
-				"name": "checkinDate",
-				"placeholder": "$checkinDate",
-				"required": "True",
-				"prompts": [
-					"What is the Check-In Date?",
-					"Please mention the Check-In Date"
-				],
-				"context": "BookHotel_dialog_From"
-			},
-			{
-				"name": "checkoutDate",
-				"placeholder": "$checkoutDate",
-				"required": "True",
-				"prompts": [
-					"What is the Check-Out Date?",
-					"Please mention the Check-Out Date"
-				],
-				"context": "BookHotel_dialog_To"
-			}
-		],
-		"actions": "BookHotel"
-	},
-	"HotelSearch": {
-		"intentname": "HotelSearch",
-		"Parameters": [{
-				"name": "location",
-				"placeholder": "$location",
-				"required": "True",
-				"prompts": [
-					"In which city you want to stay?"
-				],
-				"context": ""
-			},
-			{
-				"name": "hotelnames",
-				"placeholder": "$hotelnames",
-				"required": "False",
-				"prompts": [
-					"What is the hotel name?",
-					"Please mention the hotel name."
 				],
 				"context": ""
 			},
@@ -75,40 +22,49 @@
 				"context": ""
 			},
 			{
-				"name": "tariff",
+				"name": "Tariff",
 				"placeholder": "$tariff",
 				"required": "True",
 				"prompts": [
 					"What is your preferred tariff?",
 					"Please mention the budget."
 				],
-				"context": ""
+				"context": "GetTariff"
 			}
 		],
-		"actions": "HotelSearch"
+		"actions": "BookHotel"
 	},
-	"LocateHotel": {
-		"intentname": "LocateHotel",
+	"RestaurantBooking": {
+		"intentname": "RestaurantBooking",
 		"Parameters": [{
 				"name": "location",
 				"placeholder": "$location",
 				"required": "True",
 				"prompts": [
-					"In which city is the hotel located?"
+					"In which part of the city so you want to eat?"
+				],
+				"context": ""
+			},
+            {
+				"name": "cuisine",
+				"placeholder": "$cuisine",
+				"required": "True",
+				"prompts": [
+					"Which cuisine would you prefer?"
 				],
 				"context": ""
 			},
 			{
-				"name": "hotelnames",
-				"placeholder": "$hotelnames",
+				"name": "cost",
+				"placeholder": "$cost",
 				"required": "True",
 				"prompts": [
-					"What is the hotel name?",
-					"Please mention the hotel name."
+					"What is the cost?",
+					"Please mention the cost."
 				],
 				"context": ""
 			}
 		],
-		"actions": "LocateHotel"
+		"actions": "BookRestaurant"
 	}
 }
