Updated ipynb with executable code

--- a/params/newparams.cfg
+++ b/params/newparams.cfg
@@ -3,11 +3,15 @@
 		"intentname": "HotelBooking",
 		"Parameters": [
 			{
-				"name": "location",
-				"placeholder": "$location",
+				"name": "hloc",
+				"placeholder": "$hloc",
 				"required": "True",
 				"prompts": [
-					"In which city you want to stay?"
+					"In which place you want to stay?",
+					"In which State you want to search for a hotel?",
+					"Where do you want to stay?",
+					"Please mention the state you want to stay in.",
+					"Please mention the place you would prefer."
 				],
 				"context": ""
 			},
@@ -26,8 +30,8 @@
 				"placeholder": "$tariff",
 				"required": "True",
 				"prompts": [
-					"What is your preferred tariff?",
-					"Please mention the budget."
+					"What is your preferred tariff in INR?",
+					"Please mention the budget in INR."
 				],
 				"context": "GetTariff"
 			}
@@ -37,20 +41,11 @@
 	"RestaurantBooking": {
 		"intentname": "RestaurantBooking",
 		"Parameters": [{
-				"name": "location",
-				"placeholder": "$location",
+				"name": "rloc",
+				"placeholder": "$rloc",
 				"required": "True",
 				"prompts": [
-					"In which part of the city so you want to eat?"
-				],
-				"context": ""
-			},
-            {
-				"name": "cuisine",
-				"placeholder": "$cuisine",
-				"required": "True",
-				"prompts": [
-					"Which cuisine would you prefer?"
+					"Which part of the city would you prefer to eat?"
 				],
 				"context": ""
 			},
@@ -63,7 +58,17 @@
 					"Please mention the cost."
 				],
 				"context": ""
+			},
+            {
+				"name": "cuisine",
+				"placeholder": "$cuisine",
+				"required": "True",
+				"prompts": [
+					"Which cuisine would you prefer?"
+				],
+				"context": ""
 			}
+			
 		],
 		"actions": "BookRestaurant"
 	}
