--- a/params/newparams.cfg
+++ b/params/newparams.cfg
@@ -7,11 +7,12 @@
 				"placeholder": "$hloc",
 				"required": "True",
 				"prompts": [
-					"In which place you want to stay?",
-					"In which State you want to search for a hotel?",
+					"In which state do you want to stay?",
+					"In which State do you want to search for a hotel?",
 					"Where do you want to stay?",
 					"Please mention the state you want to stay in.",
-					"Please mention the place you would prefer."
+					"Please mention the state you would prefer.",
+					"What is your preferred location(state)?"
 				],
 				"context": ""
 			},
@@ -21,7 +22,8 @@
 				"required": "True",
 				"prompts": [
 					"What is the star rating of the hotel you would prefer?",
-					"Please mention the hotel star rating."
+					"Please mention the hotel star rating.",
+					"Are you looking for a star hotel? If yes, please provide the star rating"
 				],
 				"context": ""
 			},
@@ -45,7 +47,8 @@
 				"placeholder": "$rloc",
 				"required": "True",
 				"prompts": [
-					"Which part of the city would you prefer to eat?"
+					"Which part of the city would you prefer to eat[EAST, WEST, NORTH, SOUTH]?",
+					"Can you provide your preference on eating place[EAST, WEST, NORTH, SOUTH]"
 				],
 				"context": ""
 			},
@@ -54,12 +57,14 @@
 				"placeholder": "$cost",
 				"required": "True",
 				"prompts": [
-					"What is the cost?",
-					"Please mention the cost."
+					"What is the cost you are comfortable with?",
+					"Please mention the cost.",
+					"Could you specify the cost that you are looking for?",
+					"It would help me serve you better if you could provide your cost preference as well"
 				],
 				"context": ""
 			},
-            {
+			{
 				"name": "cuisine",
 				"placeholder": "$cuisine",
 				"required": "True",
